2007-12-29 Matvey Kozhev <sikon at users.sourceforge.net>

  * data/gtkpod.glade:
  * src/prefsdlg.c:
  
    Filename parse preferences
    Cover art search preferences
	File mask exclusion preferences
	
  * data/default-cover.png:
  
    Less fugly and 1996-style picture
	
  * src/display_coverart.c:
  
    Set resize algorithm to GDK_INTERP_BILINEAR - yields nicer-looking images

2007-12-28 Matvey Kozhev <sikon at users.sourceforge.net>

  * data/gtkpod.glade:
  
    Fixed sort window crash related to absence of tooltips. Marked
	"Dummy - do not delete"	as not translatable.
	
  * src/charset.c:
  * src/charset.h:
  
    Implemented charset_init_combo_box as a drop-in replacement
	for charset_init_combo
	
  * src/prefsdlg.c:
  
    Encoding dialog

2007-12-27 P.G. Richardson <phantom_sf at users.sourceforge.net>

  * src/prefs_window.c
  
    Fixed potential memory leak in on_coverart_display_bg_color_set
    
  * data/gtkpod.glade
  * src/prefsdlg.c
  
    Support for change background colour added to new prefs dialog

2007-12-27 P.G. Richardson <phantom_sf at users.sourceforge.net>

  * data/cdshine.png
  * data/cdshine_main.png
  * data/Makefile.am
  
    Removed reflection shadowing as this is done programmatically.
    No higlighting required on main image to png removed entirely.
    
  * gtkpod.glade
  
    Added colour selection button for CoverArt Display background colour.
    
  * src/display_coverart.c
  * src/display_coverart.h
  * prefs_window.c
  * prefs.c
  
    When a repository contains no tracks, the CoverArt Display background
    returns to a default colour of white.
    The default colour of a "live" CoverArt Display is black but can now be
    changed with a preference option available from the preferences window.
    To be added to the new preference dialog shortly.
    To achieve this and keeps a proper reflection, the reflection shadow is
    added programmatically using a gdkpixbuf created from data.
      